# chess

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  search_depth_eval.txt  uci_interactions.txt
data/: alerts_config.json  anomalies.py  dash_skeleton.py  dashboard.py  deletes.py  etl.py  init_db.py  load_analytics.py  normalize_metadata.py  run_analytics_pipeline.py  run_pipeline.py  testing.ipynb  transform_positions.py  transform_search.py
data/dashboard/: README.md  __init__.py  __main__.py  app.py  callbacks.py  components.py  config.py  data_loader.py  index.html  layout.py  tabs.py  vite.config.js
data/dashboard/src/: connection.js  main.js  style.css  util.js
data/dashboard/src/views/: compare.js  games.js  iterations.js  overview.js  pruning.js  search.js  sprt.js  timing.js  tree.js  trends.js
data/databases/: deletes.py  init_raw_db.py  load_analytics.py  migrate_schema.py  run_analytics_pipeline.py  test_schema.py
data/etl/: __init__.py  __main__.py  db.py  ingest.py  openings.py  paths.py  utils.py
data/openings/: README.md  build_from_pgn.py
data/transforms/: normalize_metadata.py  transform_positions.py  transform_search.py
docs/: data_architecture.md  nnue.md
engine/: PrecomputedMoveData.cpp  PrecomputedMoveData.h  arbiter.cpp  bits.h  board.cpp  board.h  gamestate.cpp  helpers.cpp  helpers.h  move.h  moveGenerator.cpp  moveGenerator.h  testing.cpp
include/: NNUE.h  PrecomputedMoveData.h  UCI.h  bits.h  board.h  book.h  config.h  engine.h  evaluator.h  game_log.h  gamestate.h  helpers.h  logging.h  magics.h  move.h  moveGenerator.h  search_limits.h  search_result.h  searcher.h  session.h  stats.h  timer.h  tt.h
src/: NNUE.cpp  NNUE.h  PrecomputedMoveData.cpp  PrecomputedMoveData.h  UCI.cpp  board.cpp  board.h  book.cpp  book.h  engine.cpp  engine.h  evaluator.cpp  game_log.h  gamestate.cpp  gamestate.h  helpers.cpp  helpers.h  inspect_net.cpp  logging.h  magics.cpp  move.h  moveGenerator.cpp  moveGenerator.h  search_limits.h  searcher.cpp  searcher.h  stats.h  timer.h  tomahawk.cpp  tt.h  zobrist.h
tests/: bench.py  book.py  compare.py  default_14316802319403634589_0.profraw  del____perft.py  engine_game_results.db  eval_consistency_tests.py  eval_regression_tests.py  game_tests.py  generate_profile.py  match_stats.py  perft.py  release.py  search_tests.py  sprt.py  stockfish_elo_estimate.py  sts.py  tournament.py  utils.py
tests/logs/: sprt_v2_negamax.exe_v1.7_moveOrdering.exe.pgn
tomahawk/: NNUE.cpp  NNUE.h  PrecomputedMoveData.cpp  PrecomputedMoveData.h  UCI.cpp  UCI.h  arbiter.cpp  arbiter.h  bits.h  board.cpp  board.h  engine.cpp  engine.h  engine.profdata  engine.profraw  evaluator.cpp  evaluator.h  game.cpp  game.h  game_log.h  gamestate.cpp  gamestate.h  helpers.cpp  helpers.h  magics.cpp  main.cpp  makefile.mak  makefile_dll.mak  makefile_game.mak  makefile_test.mak  move.h  moveGenerator.cpp  moveGenerator.h  msc_ver.h  output.txt  searcher.cpp  searcher.h  session.h  stats.cpp  stats.h  (+6 more)
tools/: spsa_tuner.py
visual/: makefile.mak
visual/src/: TestDLL.java  makefile_dll.mak
visual/src/board/: Board.java  BoardUtils.java  Move.java  Tile.java
visual/src/engine/: Engine.h  Engine.java
visual/src/gui/: JChess.java  Table.java
visual/src/pieces/: Alliance.java  Knight.java  Piece.java
